dark mode and light mode fixed

--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -50,7 +50,7 @@
     color: rgb(16, 17, 19);
 }
 .mantine-9zohaa {
-    margin: -8px;
+    margin: -10px;
     display: flex;
     flex-wrap: wrap;
     -moz-box-pack: start;
